k8s/ingress/traefik/controller/prometheus-stack/prometheus-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ui-route
  namespace: monitoring
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.desarrollo`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
